Added Update User and Transaction, and the Role entity